--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,5 @@
 /*  your css code here. If applicable */
+*{
+	background-image:url('https://storage.googleapis.com/acciojob-open-file-collections/center-image.png');
+	color:white;
+}
