--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
 *{
-	background-image:url('https://storage.googleapis.com/acciojob-open-file-collections/center-image.png');
+	background-image: url('https://www.globalfocusmagazine.com/wp-content/uploads/2020/02/Engaging_with_technology-scaled.jpg');
 	color:white;
 }
